Thu Oct 13 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.10

	* pokerconfigupgrade.in: do not prepend path components that are already present
	  in sys.path. Prevents giving priority to standard path over PYTHONPATH.

Fri Sep 30 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.9

	* pokerengine/pokergame.py (PokerGame.buildPlayerList): exclude players with
	  wait_for = "first_round". This is only meaningful when set before starting
	  the game and allows the caller to exclude players for the next game while
	  allowing it to join the game after the next game.

	* pokerengine/pokergame.py (PokerGame.playersBeginTurn): do not reset wait_for if
	  "first_round". It may be used to exclude players from the blind/ante round and
	  will be reset to False when the blind/ante round is over.

	* pokerengine/pokergame.py (PokerGame.initRound): s/sitPlayersWait/acceptPlayersWait/

Thu Sep 29 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokergame.py (PokerGame.updateBlinds): change wait_for
	  "late" to False when forbiding missed blind.

	* tests/blinds.py.in (TestBlinds.test0): Two players came in and
	 are waiting for the late blind because they attempted to enter
	 either on the small blind or the dealer position.  Fake this
	 situation instead of playing hands that will lead to the same
	 because it introduces an complexity that is not necessary. This
	 case can happen indeed although very rarely.

	* pokerengine/pokergame.py (PokerPlayer.isMissedBlind): return false
	  if "n/a"

	* poker-engine/conf/*no-limit*: minimum bet does not vary

Sat Sep 24 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.8

	* pokerconfigupgrade.in: add python installation directory in python path

Wed Sep 21 2005  Loic Dachary  <loic@gnu.org>

	* bootstrap: do not run autoheader

	* pokerclient2d/*.c: add getopt

Fri Aug 26 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.7

	* pokerengine/pokerengineconfig.py (Config.upgrade): ignore