@@ -1,5 +1,7 @@
 Release 1.0.10
 
+Per player application information field.
+
 Release 1.0.9
 
 No limit bet structure fixes.
