@@ -1,6 +1,11 @@
-Thu Oct 13 2005  Loic Dachary  <loic@gnu.org>
+Fri Oct 14 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.10
+
+	* pokerengine/pokergame.py (PokerPlayer.getUserData): user_data field
+	  defined for the caller to store per-player data
+
+Thu Oct 13 2005  Loic Dachary  <loic@gnu.org>
 
 	* pokerconfigupgrade.in: do not prepend path components that are already present
 	  in sys.path. Prevents giving priority to standard path over PYTHONPATH.
